# RL-for-Universal-Compiler-Optimization

./: .gitignore  LICENSE  README.md  pyproject.toml
data/corpus/demo/: manifest.json
data/corpus/demo/synth_0000/: fn.c
data/corpus/demo/synth_0001/: fn.c
data/corpus/demo/synth_0002/: fn.c
data/corpus/demo/synth_0003/: fn.c
data/corpus/demo/synth_0004/: fn.c
data/corpus/demo/synth_0005/: fn.c
data/corpus/demo/synth_0006/: fn.c
data/corpus/demo/synth_0007/: fn.c
data/corpus/demo/synth_0008/: fn.c
docs/: architecture.md  dataset_schema.md  deployment.md  hardware_setup.md
infra/docker/: Dockerfile  docker-compose.yml
infra/inference/: opt_driver.py
infra/scripts/: build_docker.sh
rl_uco/: __init__.py  config.py
rl_uco/corpus/: __init__.py  extract.py  models.py  normalize.py
rl_uco/data/: __init__.py  collector.py  export_parquet.py  schema.py  versioning.py
rl_uco/env/: __init__.py  compile_run.py  reward.py
rl_uco/eval/: __init__.py  report.py
rl_uco/graph/: __init__.py  fallback.py  llvm_to_graph.py  mlir_to_graph.py  parse.py
rl_uco/hardware/: __init__.py  base.py  cpu_arm.py  cpu_x86.py  gpu_cuda.py
rl_uco/ir/: __init__.py  llvm_adapter.py  mlir_adapter.py
rl_uco/passes/: __init__.py  executor.py  registry.py  registry.yaml  validator.py
rl_uco/rl/: __init__.py  actor_critic.py  encoder.py  inference.py  offline_trainer.py
scripts/: generate_demo_data.py  scale_corpus.py
tests/: test_agent.py  test_corpus.py  test_graph.py  test_passes.py  test_reward.py  test_schema.py
tests/fixtures/: sample.c  sample_kernel.mlir
(+11 files in other folders)
